[package]
name = "poseidon-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
poseidon-rs = "0.0.10"
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk" }
